# python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: anthropic_wrap.py  basic_wrap.py  direct_analysis.py  management_api.py  websocket_alerts.py
src/aibim/: __init__.py  _version.py  alerts.py  auth.py  client.py  data.py  errors.py  guard.py  models.py  proxy.py  retry.py  rules.py  streaming.py  tenant.py  websocket.py
tests/: test_client.py  test_errors.py  test_guard.py  test_models.py  test_proxy.py  test_retry.py
